<resources>
    <string name="app_name">Wikipedia</string>
    <string name="no_articles_could_be_found">No articles found</string>
    <string name="fetching_the_list">Loading, please wait…</string>
    <string name="get_started">Search for a topic</string>
    <string name="new_window_icon">New Window Icon</string>
    <string name="wiki_icon">Result Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_search">fragment_search</string>
    <string name="fragment_web_view">fragment_web_view</string>
    <string name="insertar">Insertar</string>
    <string name="lugares_visitados">Lugares visitados</string>
    <string name="placesfragment">PlacesFragment</string>
    <string name="clock_button" />
    <string name="title">Title</string>
    <string name="visit">Visit</string>
    <string name="descripcion">Descripcion</string>
    <string name="cantidad_de_lugares_frecuentes">Cantidad de lugares frecuentes</string>
    <string name="guardar_configuraci_n">Guardar configuración</string>
    <string name="configuracion">Configuracion</string>
    <string name="digite_cantidad">Digite cantidad</string>

    <string name="settings">Settings</string>
    <string name="top">Top Visited Places</string>
    <string name="visited">Visited Places</string>



    <string name="topvisitedbutton">topVisitedButton</string>
    <string name="visitedbutton">visitedButton</string>


</resources>
