<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#A8223C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/lora_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchNow"
            style="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            app:iconifiedByDefault="false" >

        </androidx.appcompat.widget.SearchView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/configButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/configuracion"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/config" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/clockButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/visitedbutton"
                    android:padding="8dp"
                    android:src="@drawable/img" />

                <ImageButton
                    android:id="@+id/topVisitedButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/topvisitedbutton"
                    android:padding="8dp"
                    android:src="@drawable/star" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wikiRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#DADADA"
        android:src="@drawable/grey_app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="progressBar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noDataState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cactusLogo,textView3" />

    <ImageView
        android:id="@+id/cactusLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_articles_could_be_found"
        android:src="@drawable/cactus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:src="@drawable/grey_app_icon"
        android:text="@string/no_articles_could_be_found"
        android:textColor="#40FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cactusLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>
